Fix unable to scroll on mobile issue

--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -1,22 +1,3 @@
- .site{
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-.ui.footer.segment {
-  flex: 1;
-  background: $black;
-}
-
-footer{
-  color: $white;
-  text-align: center;
-  font-size: 1.2rem !important;
-  a{
-    color: $purpler;
-  }
-}
 .sidebar_copyright{
   background: $black !important;
   color: $white !important;
@@ -24,5 +5,25 @@ footer{
   bottom: 0px;
   a{
     color: $purpler;
+  }
+}
+@media only screen and (min-width : 1024px) {
+  .site{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  .ui.footer.segment {
+    flex: 1;
+    background: $black;
+  }
+
+  footer{
+    color: $white;
+    text-align: center;
+    font-size: 1.2rem !important;
+    a{
+      color: $purpler;
+    }
   }
 }
